fix: classes overlaps with tailwind classes causing flicker error on ssr

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -50,6 +50,79 @@
   );
 }
 
+:root {
+  --c-bg: #091a28;
+  --c-scrollbar: #bbb;
+  --c-scrollbar-hover: #bbb;
+}
+
+/* Hide scrollbar globally */
+html {
+  scrollbar-width: none !important; /* Firefox */
+  -ms-overflow-style: none !important; /* IE and Edge */
+}
+
+html::-webkit-scrollbar {
+  display: none !important; /* Chrome, Safari and Opera */
+}
+
+body {
+  @apply transition-colors duration-300 ease-linear overflow-x-hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* GLOBAL THEME TEXT AND BODY BACKGROUND! */
+.light > body {
+  @apply bg-[var(--bg-light)] text-[var(--text-light)];
+}
+.dark > body {
+  @apply bg-[var(--bg-dark)] text-[var(--text-dark)];
+}
+
+/* Header */
+.header-class {
+    @apply h-[88px] flex justify-between p-8 px-5 lg:px-8;
+}
+.logo {
+    @apply 2xl:fixed;
+}
+
+/* Global Classes */
+
+/*Nuxt Main*/
+.main {
+   @apply flex flex-col min-h-screen relative overflow-hidden max-w-[1920px] mx-auto
+}
+/*Nuxt Body container*/
+.body-container {
+   @apply max-w-3xl mx-auto px-8 py-6 md:py-10;
+}
+.footer-container {
+    @apply text-left w-full text-gray-600 dark:text-gray-400;
+}
+/* Global Heading Styles */
+.heading-1 {
+    @apply text-3xl md:text-4xl font-bold mb-3;
+}
+
+.heading-2 {
+    @apply text-2xl md:text-3xl;
+}
+
+.heading-3 {
+    @apply text-lg md:text-xl;
+}
+.heading-4 {
+    @apply text-lg md:text-xl;
+}
+
+.heading-5 {
+    @apply text-base md:text-lg;
+}
+.heading-6 {
+    @apply text-sm md:text-base;
+}
+
 /* Global utility classes for the gradient text */
 .text-main-gradient {
     @apply font-bold bg-gradient-to-r
@@ -59,14 +132,14 @@
 }
 
 .text-main-gradient-animated {
-  color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 200% auto;
-  animation: gradient-shift 3s ease infinite;
-  background-image: var(--main-gradient);
-  background-repeat: no-repeat;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% auto;
+    animation: gradient-shift 3s ease infinite;
+    background-image: var(--main-gradient);
+    background-repeat: no-repeat;
 }
 
 .hover-main-gradient {
@@ -104,89 +177,15 @@
 
 /* Gradient animation */
 @keyframes gradient-shift {
-  0% {
-    background-position: 0 center;
-  }
-  50% {
-    background-position: 100% center;
-  }
-  100% {
-    background-position: 0 center;
-  }
-}
-
-/* Header */
-.header-class {
-  @apply h-[88px] flex justify-between p-8 px-5 lg:px-8;
-}
-.logo {
-  @apply 2xl:fixed;
-}
-
-.footer-container {
-    @apply text-left py-4 text-gray-600 dark:text-gray-400
-}
-/* Global Classes */
-/* Global Heading Styles */
-.heading-1 {
-  @apply text-3xl md:text-4xl font-bold mb-3;
-}
-
-.heading-2 {
-  @apply text-2xl md:text-3xl;
-}
-
-.heading-3 {
-  @apply text-lg md:text-xl;
-}
-.heading-4 {
-  @apply text-lg md:text-xl;
-}
-
-.heading-5 {
-  @apply text-base md:text-lg;
-}
-.heading-6 {
-  @apply text-sm md:text-base;
-}
-
-
-
-:root {
-  --c-bg: #091a28;
-  --c-scrollbar: #bbb;
-  --c-scrollbar-hover: #bbb;
-}
-
-/* Hide scrollbar globally */
-html {
-  scrollbar-width: none !important; /* Firefox */
-  -ms-overflow-style: none !important; /* IE and Edge */
-}
-
-html::-webkit-scrollbar {
-  display: none !important; /* Chrome, Safari and Opera */
-}
-
-body {
-  @apply transition-colors duration-300 ease-linear overflow-x-hidden;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-/* GLOBAL THEME TEXT AND BODY BACKGROUND! */
-.light > body {
-  @apply bg-[var(--bg-light)] text-[var(--text-light)];
-}
-.dark > body {
-  @apply bg-[var(--bg-dark)] text-[var(--text-dark)];
-}
-/*Nuxt Main*/
-.main {
-    @apply flex flex-col min-h-screen relative overflow-hidden max-w-[1920px] mx-auto
-}
-/*Nuxt Body container*/
-.container {
-  @apply max-w-3xl mx-auto px-8 py-6 md:py-10;
+    0% {
+        background-position: 0 center;
+    }
+    50% {
+        background-position: 100% center;
+    }
+    100% {
+        background-position: 0 center;
+    }
 }
 /* Add shine effect */
 .shine {
